Fixed iphone color bleeding

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@
 }
 
 html, body {
+  background-color: #0e1a2b;
   margin: 0;
   padding: 0;
   width: 100%;
